[package]
name = "tetris-rs"
version = "0.1.0"
edition = "2021"
default-run = "tetris-rs"

[[bin]]
name = "tetros-ai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sdl2 = { version = "0.35.2", default-features = false, features = ["ttf"]}

