[package]
name = "tetros"
version = "0.1.0"
edition = "2021"
default-run = "tetros"

[[bin]]
name = "tetros-ai"

[[bin]]
name = "tetros-viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sdl2 = { version = "0.35.2", default-features = false, features = ["ttf"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

